--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
+    <div class="block">
+        <p>New line</p>
+    </div>
+    
     <div class="widget">
         <ul class="widget__ul hide">
             <li class="widget__ul__li"><a href=""><img src="icons/widgetPhone.svg" alt="widgetPhone"></a></li>
