--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <div class="block">
         <p>New line</p>
+        <img src="sky.jpg" alt="sky">
     </div>
     
     <div class="widget">
