--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="block">
         <p>New line</p>
         <img src="sky.jpg" alt="sky">
+        <img src="sky2.jpeg" alt="sky2">
     </div>
     
     <div class="widget">
