resizes first img

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="block">
         <p>New line</p>
         <p>emergency-fix</p>
-        <img src="sky.jpg" alt="sky">
+        <img id="first-img" src="sky.jpg" alt="sky">
         <img src="sky2.jpeg" alt="sky2">
     </div>
     
